Stabilize G9U1 author review round 3